[gd_scene load_steps=21 format=2]

[ext_resource path="res://TileMap_Escenario.tscn" type="PackedScene" id=1]
[ext_resource path="res://Escenas/FondoMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Escenas/Alone_Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Escenas/AnimacionMain.tscn" type="PackedScene" id=4]
[ext_resource path="res://MenuEng.gd" type="Script" id=5]
[ext_resource path="res://Soundtracks/TrackMenu.ogg" type="AudioStream" id=6]
[ext_resource path="res://Fuentes/Font/TheEarthBreeder font.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Sprites/text12.png" type="Texture" id=8]
[ext_resource path="res://Fuentes/FuenteMenu.tres" type="DynamicFont" id=9]

[sub_resource type="DynamicFont" id=1]
size = 70
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 70
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 70
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
size = 80
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=5]
size = 65
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=6]
size = 70
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=7]
size = 65
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=8]
size = 65
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=9]
size = 65
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=10]
size = 65
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=11]
size = 65
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[node name="MenuEng" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -5.03968
margin_bottom = -5.03967
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KinematicBody2D" parent="." instance=ExtResource( 4 )]
position = Vector2( 621.948, 229.78 )

[node name="text12" type="Sprite" parent="."]
position = Vector2( 363.61, 95.823 )
scale = Vector2( 0.796, 0.757 )
texture = ExtResource( 8 )

[node name="TileMap" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray( -1, 12, 0, -65536, 12, 0, -65535, 12, 0, -65534, 12, 0, -65533, 12, 0, -65532, 12, 0, -65531, 12, 0, -65530, 12, 0, -65529, 12, 0, -65528, 12, 0, -65527, 12, 0, -65526, 12, 0, -65525, 12, 0, -65524, 12, 0, -65523, 12, 0, -65522, 12, 0, -65521, 12, 0, -65520, 12, 0, -65519, 12, 0, -65518, 12, 0, -65517, 12, 0, -65516, 12, 0, -65515, 12, 0, -65514, 12, 0, -65513, 12, 0, -65512, 12, 0, -65511, 12, 0, -65510, 12, 0, -65509, 12, 0, -65508, 12, 0, -65507, 12, 0, -65506, 12, 0, -65505, 12, 0, -65504, 12, 0, -65503, 12, 0, -65502, 12, 0, 65535, 12, 0, 34, 12, 0, 131071, 12, 0, 65570, 12, 0, 196607, 12, 0, 131106, 12, 0, 262143, 12, 0, 196642, 12, 0, 327679, 12, 0, 262178, 12, 0, 393215, 12, 0, 327714, 12, 0, 458751, 12, 0, 393250, 12, 0, 524287, 12, 0, 458786, 12, 0, 589823, 12, 0, 524322, 12, 0, 655359, 12, 0, 589858, 12, 0, 720895, 12, 0, 655394, 12, 0, 786431, 12, 0, 720930, 12, 0, 851967, 12, 0, 786466, 12, 0, 917503, 2, 0, 851968, 11, 0, 851969, 11, 0, 851970, 11, 0, 851971, 11, 0, 851972, 11, 0, 851973, 11, 0, 851974, 11, 0, 851975, 11, 0, 851976, 11, 0, 851977, 11, 0, 851978, 11, 0, 851979, 11, 0, 851980, 11, 0, 851981, 11, 0, 851982, 11, 0, 851983, 11, 0, 851984, 11, 0, 851985, 11, 0, 851986, 11, 0, 851987, 11, 0, 851988, 11, 0, 851989, 11, 0, 851990, 11, 0, 851991, 11, 0, 851992, 11, 0, 851993, 11, 0, 851994, 11, 0, 851995, 11, 0, 851996, 11, 0, 851997, 11, 0, 851998, 11, 0, 851999, 11, 0, 852000, 11, 0, 852001, 11, 0, 852002, 11, 0, 852003, 3, 0, 983039, 8, 0, 917504, 1, 0, 917505, 1, 0, 917506, 1, 0, 917507, 1, 0, 917508, 1, 0, 917509, 1, 0, 917510, 1, 0, 917511, 1, 0, 917512, 1, 0, 917513, 1, 0, 917514, 1, 0, 917515, 1, 0, 917516, 1, 0, 917517, 1, 0, 917518, 1, 0, 917519, 1, 0, 917520, 1, 0, 917521, 1, 0, 917522, 1, 0, 917523, 1, 0, 917524, 1, 0, 917525, 1, 0, 917526, 1, 0, 917527, 1, 0, 917528, 1, 0, 917529, 1, 0, 917530, 1, 0, 917531, 1, 0, 917532, 1, 0, 917533, 1, 0, 917534, 1, 0, 917535, 1, 0, 917536, 1, 0, 917537, 1, 0, 917538, 1, 0, 917539, 7, 0, 1048575, 8, 0, 983040, 1, 0, 983041, 1, 0, 983042, 1, 0, 983043, 1, 0, 983044, 1, 0, 983045, 1, 0, 983046, 1, 0, 983047, 1, 0, 983048, 1, 0, 983049, 1, 0, 983050, 1, 0, 983051, 1, 0, 983052, 1, 0, 983053, 1, 0, 983054, 1, 0, 983055, 1, 0, 983056, 1, 0, 983057, 1, 0, 983058, 1, 0, 983059, 1, 0, 983060, 1, 0, 983061, 1, 0, 983062, 1, 0, 983063, 1, 0, 983064, 1, 0, 983065, 1, 0, 983066, 1, 0, 983067, 1, 0, 983068, 1, 0, 983069, 1, 0, 983070, 1, 0, 983071, 1, 0, 983072, 1, 0, 983073, 1, 0, 983074, 1, 0, 983075, 7, 0, 1114111, 8, 0, 1048576, 1, 0, 1048577, 1, 0, 1048578, 1, 0, 1048579, 1, 0, 1048580, 1, 0, 1048581, 1, 0, 1048582, 1, 0, 1048583, 1, 0, 1048584, 1, 0, 1048585, 1, 0, 1048586, 1, 0, 1048587, 1, 0, 1048588, 1, 0, 1048589, 1, 0, 1048590, 1, 0, 1048591, 1, 0, 1048592, 1, 0, 1048593, 1, 0, 1048594, 1, 0, 1048595, 1, 0, 1048596, 1, 0, 1048597, 1, 0, 1048598, 1, 0, 1048599, 1, 0, 1048600, 1, 0, 1048601, 1, 0, 1048602, 1, 0, 1048603, 1, 0, 1048604, 1, 0, 1048605, 1, 0, 1048606, 1, 0, 1048607, 1, 0, 1048608, 1, 0, 1048609, 1, 0, 1048610, 1, 0, 1048611, 7, 0, 1179647, 8, 0, 1114112, 1, 0, 1114113, 1, 0, 1114114, 1, 0, 1114115, 1, 0, 1114116, 1, 0, 1114117, 1, 0, 1114118, 1, 0, 1114119, 1, 0, 1114120, 1, 0, 1114121, 1, 0, 1114122, 1, 0, 1114123, 1, 0, 1114124, 1, 0, 1114125, 1, 0, 1114126, 1, 0, 1114127, 1, 0, 1114128, 1, 0, 1114129, 1, 0, 1114130, 1, 0, 1114131, 1, 0, 1114132, 1, 0, 1114133, 1, 0, 1114134, 1, 0, 1114135, 1, 0, 1114136, 1, 0, 1114137, 1, 0, 1114138, 1, 0, 1114139, 1, 0, 1114140, 1, 0, 1114141, 1, 0, 1114142, 1, 0, 1114143, 1, 0, 1114144, 1, 0, 1114145, 1, 0, 1114146, 1, 0, 1114147, 7, 0, 1245183, 8, 0, 1179648, 1, 0, 1179649, 1, 0, 1179650, 1, 0, 1179651, 1, 0, 1179652, 1, 0, 1179653, 1, 0, 1179654, 1, 0, 1179655, 1, 0, 1179656, 1, 0, 1179657, 1, 0, 1179658, 1, 0, 1179659, 1, 0, 1179660, 1, 0, 1179661, 1, 0, 1179662, 1, 0, 1179663, 1, 0, 1179664, 1, 0, 1179665, 1, 0, 1179666, 1, 0, 1179667, 1, 0, 1179668, 1, 0, 1179669, 1, 0, 1179670, 1, 0, 1179671, 1, 0, 1179672, 1, 0, 1179673, 1, 0, 1179674, 1, 0, 1179675, 1, 0, 1179676, 1, 0, 1179677, 1, 0, 1179678, 1, 0, 1179679, 1, 0, 1179680, 1, 0, 1179681, 1, 0, 1179682, 1, 0, 1179683, 7, 0, 1310719, 8, 0, 1245184, 1, 0, 1245185, 1, 0, 1245186, 1, 0, 1245187, 1, 0, 1245188, 1, 0, 1245189, 1, 0, 1245190, 1, 0, 1245191, 1, 0, 1245192, 1, 0, 1245193, 1, 0, 1245194, 1, 0, 1245195, 1, 0, 1245196, 1, 0, 1245197, 1, 0, 1245198, 1, 0, 1245199, 1, 0, 1245200, 1, 0, 1245201, 1, 0, 1245202, 1, 0, 1245203, 1, 0, 1245204, 1, 0, 1245205, 1, 0, 1245206, 1, 0, 1245207, 1, 0, 1245208, 1, 0, 1245209, 1, 0, 1245210, 1, 0, 1245211, 1, 0, 1245212, 1, 0, 1245213, 1, 0, 1245214, 1, 0, 1245215, 1, 0, 1245216, 1, 0, 1245217, 1, 0, 1245218, 1, 0, 1245219, 7, 0 )

[node name="Play" type="Button" parent="."]
margin_left = 4.749
margin_top = 227.26
margin_right = 206.749
margin_bottom = 280.26
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.564706, 0.564706, 0.564706, 1 )
custom_colors/font_color_pressed = Color( 0.85098, 0.0784314, 0.0784314, 1 )
action_mode = 0
text = "PLAY"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Button" parent="."]
margin_left = 5.011
margin_top = 307.74
margin_right = 319.011
margin_bottom = 360.74
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.564706, 0.564706, 0.564706, 1 )
custom_colors/font_color_pressed = Color( 0.85098, 0.0784314, 0.0784314, 1 )
action_mode = 0
text = "OPTIONS"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="."]
margin_left = 8.578
margin_top = 426.357
margin_right = 207.578
margin_bottom = 479.357
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.564706, 0.564706, 0.564706, 1 )
custom_colors/font_color_pressed = Color( 0.85098, 0.0784314, 0.0784314, 1 )
action_mode = 0
text = "EXIT"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Button" parent="."]
margin_left = 1058.0
margin_top = 426.0
margin_right = 1371.0
margin_bottom = 486.0
focus_mode = 1
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.564706, 0.564706, 0.564706, 1 )
custom_colors/font_color_pressed = Color( 0.85098, 0.0784314, 0.0784314, 1 )
action_mode = 0
enabled_focus_mode = 1
text = "CREDITS"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Key" type="Label" parent="."]
visible = false
margin_left = 249.02
margin_top = 50.755
margin_right = 1120.02
margin_bottom = 347.755
custom_fonts/font = ExtResource( 9 )
text = "              MOVEMENT
			
          W:     JUMP
          A:     MOVE LEFT
          S:     MOVE RIGHT
          ESC: PAUSE LEVEL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="Button" parent="."]
margin_left = 1075.07
margin_top = 360.74
margin_right = 1366.07
margin_bottom = 410.74
focus_mode = 1
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.564706, 0.564706, 0.564706, 1 )
custom_colors/font_color_pressed = Color( 0.85098, 0.0784314, 0.0784314, 1 )
action_mode = 0
enabled_focus_mode = 1
text = "CONTROLS"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound" type="Button" parent="."]
visible = false
margin_left = 566.5
margin_top = 191.823
margin_right = 804.5
margin_bottom = 244.823
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.564706, 0.564706, 0.564706, 1 )
custom_colors/font_color_pressed = Color( 0.85098, 0.0784314, 0.0784314, 1 )
disabled = true
action_mode = 0
text = "SOUND"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Language" type="Button" parent="."]
visible = false
margin_left = 566.0
margin_top = 263.0
margin_right = 803.0
margin_bottom = 316.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.564706, 0.564706, 0.564706, 1 )
custom_colors/font_color_pressed = Color( 0.85098, 0.0784314, 0.0784314, 1 )
action_mode = 0
text = "LANGUAGE"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Español" type="Button" parent="."]
visible = false
margin_left = 550.0
margin_top = 244.0
margin_right = 835.0
margin_bottom = 310.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.564706, 0.564706, 0.564706, 1 )
custom_colors/font_color_pressed = Color( 0.85098, 0.0784314, 0.0784314, 1 )
action_mode = 0
text = "SPANISH"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RegresarM" type="Button" parent="."]
visible = false
margin_left = 534.0
margin_top = 360.74
margin_right = 850.0
margin_bottom = 413.74
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.564706, 0.564706, 0.564706, 1 )
custom_colors/font_color_pressed = Color( 0.85098, 0.0784314, 0.0784314, 1 )
action_mode = 0
text = "BACK"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RegresarMenu" type="Button" parent="."]
visible = false
margin_left = 534.0
margin_top = 360.74
margin_right = 850.0
margin_bottom = 413.0
focus_mode = 1
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.564706, 0.564706, 0.564706, 1 )
custom_colors/font_color_pressed = Color( 0.85098, 0.0784314, 0.0784314, 1 )
action_mode = 0
enabled_focus_mode = 1
text = "BACK"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Regresar" type="Button" parent="."]
visible = false
margin_left = 534.0
margin_top = 360.74
margin_right = 850.0
margin_bottom = 413.0
focus_mode = 1
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.564706, 0.564706, 0.564706, 1 )
custom_colors/font_color_pressed = Color( 0.85098, 0.0784314, 0.0784314, 1 )
action_mode = 0
enabled_focus_mode = 1
text = "BACK"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true

[node name="ParallaxBackground" parent="." instance=ExtResource( 2 )]

[node name="Player" parent="ParallaxBackground" instance=ExtResource( 3 )]
visible = false
position = Vector2( 98.7782, 44.4594 )
[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="Sound" to="." method="_on_Sound_pressed"]
[connection signal="pressed" from="Language" to="." method="_on_Language_pressed"]
[connection signal="pressed" from="Español" to="." method="_on_Espaol_pressed"]
[connection signal="pressed" from="RegresarM" to="." method="_on_RegresarM_pressed"]
[connection signal="pressed" from="RegresarMenu" to="." method="_on_RegresarMenu_pressed"]
[connection signal="pressed" from="Regresar" to="." method="_on_Regresar_pressed"]
